--- a/banco-api/package.json
+++ b/banco-api/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.8",
     "express": "^4.17.2",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0",
+    "typeorm": "^0.2.41",
     "typescript": "^4.5.4"
   }
 }
