--- a/banco-api/package.json
+++ b/banco-api/package.json
@@ -12,6 +12,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.6",
     "nodemon": "^2.0.15"
   }
